WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302462
REGRESSION(
302840@main
): [GStreamer][LibWebRTC] Build broken with clang 18
https://bugs.webkit.org/show_bug.cgi?id=302462
Summary
REGRESSION(302840@main): [GStreamer][LibWebRTC] Build broken with clang 18
Philippe Normand
Reported
2025-11-13 05:22:49 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-11-13 05:35:39 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53877
EWS
Comment 2
2025-11-13 05:38:56 PST
Committed
302980@main
(dfa42ca42304): <
https://commits.webkit.org/302980@main
> Reviewed commits have been landed. Closing PR #53877 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-11-13 05:39:11 PST
<
rdar://problem/164631548
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug