REGRESSION(302840@main): [GStreamer][LibWebRTC] Build broken with clang 18 https://bugs.webkit.org/show_bug.cgi?id=302462

Unreviewed, add explicit initializer for the colorspace value when creating the VideoFrameGStreamer.

* Source/WebCore/platform/mediastream/libwebrtc/gstreamer/GStreamerVideoEncoderFactory.cpp:

Canonical link: https://commits.webkit.org/302980@main